# usb-otg-workspace

example-longan-nano-board/: Cargo.toml
example-longan-nano-board/examples/: hid_class.rs
